# haskell-stack-travis-test

./: .gitignore  .travis.yml  README.md  haskell-stack-travis-test.cabal
app/: Main.hs
src/: Lib.hs  Main.hs
test/: LibTests.hs
