name:                haskell-stack-travis-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-stack-travis-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-stack-travis-test-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-stack-travis-test

test-suite lib-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LibTests.hs
  build-depends:       base >= 4.7 && < 5
                     , tasty
                     , tasty-hunit
                     , haskell-stack-travis-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
